# lutrii

./: .buildnotes  .dockerignore  .gitignore  Anchor.toml  BUILD_AND_DEPLOYMENT.md  BUILD_FINAL_STATUS.md  BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  CI_BUILD_STATUS.md  COMPLETION_REPORT.md  COMPREHENSIVE_TESTING_GUIDE.md  Cargo.toml  DEPLOYMENT_STATUS.md  DOCKER_BUILD_README.md  Dockerfile.build  FIXES_IMPLEMENTED.md  IMPLEMENTATION_GUIDE.md  NEXT_STEPS.md  PRIORITY_ACTION_PLAN.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RESTART_GUIDE.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_SUMMARY.md  SEED_VAULT_INTEGRATION.md  SEEKER_BUILD_SUCCESS.md  STATUS.md  TRANSACTION_BUILDING_GUIDE.md  WEEK2_COMPLETION_SUMMARY.md  WEEK2_TESTING_SUMMARY.md  build.sh  docker-build.sh  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: build.yml
docs/: BURN_MECHANISM_REDESIGN.md  FEE_COLLECTION_STRATEGY.md  FEE_WALLETS.md  LIABILITY_PROTECTION_GUIDE.md  LIABILITY_PROTECTION_SUMMARY.md  MULTI_TOKEN_IMPLEMENTATION_PLAN.md  PHASE1_SIMPLIFIED.md  PHASED_IMPLEMENTATION_PLAN.md  PRIVACY_ARCHITECTURE.md  PRIVACY_IMPLEMENTATION_SUMMARY.md  PRIVACY_POLICY.md  SESSION_SUMMARY_2026-02-12.md  TERMS_OF_SERVICE.md  TOKEN_ECONOMICS_ARCHITECTURE.md  TOKEN_ECONOMICS_QUICK_REFERENCE.md  UX_SPECIFICATION.md  WEEK1-2_PROGRESS.md
mobile/: SOLANA_MOBILE_SEEKER.md  package.json  tsconfig.json
mobile/src/components/: ApplePayButton.tsx  BiometricPrompt.tsx  BottomSheet.tsx  (+3 more)
programs/lutrii-merchant-registry/: Cargo.toml
programs/lutrii-merchant-registry/src/: lib.rs
programs/lutrii-recurring/: Cargo.toml
programs/lutrii-recurring/src/: errors.rs  lib.rs
programs/lutrii-recurring/src/instructions/: initialize_config.rs  update_config.rs
programs/lutrii-recurring/src/state/: platform_config.rs
scripts/: deploy-devnet.sh  init-platform.ts  setup.sh
tests/: lutrii-merchant-registry.ts  lutrii-recurring.ts  merchant-tokens.ts  platform-config.ts
(+19 files in other folders)
