[package]
name = "lutrii-recurring"
version = "1.0.0"
description = "Lutrii recurring payment program with token delegation"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "lutrii_recurring"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
spl-token = "4.0.0"
