[package]
name = "lutrii-recurring"
version = "1.0.0"
description = "Lutrii recurring payment program with token delegation"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "lutrii_recurring"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
lutrii-merchant-registry = { path = "../lutrii-merchant-registry", features = ["cpi"] }

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
spl-token = "4.0.0"
